<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:weightSum="10">

    <TextView
            android:id="@+id/tvNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iphone_nome"
            android:textStyle="bold"
            android:textSize="18sp" />

    <TextView
            android:id="@+id/tvModelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iphone_modelo"
            android:textSize="16sp" />

    <TextView
            android:id="@+id/tvPreco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iphone_preco"
            android:textSize="16sp" />

</LinearLayout>