<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        tools:context=".ServicosActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servicoEdit"
            android:textStyle="bold"
            android:textSize="15sp" />

    <EditText
            android:id="@+id/txNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ex_troca_display"
            android:inputType="textCapSentences"
            android:layout_marginBottom="10dp" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modeloEdit"
            android:textStyle="bold"
            android:textSize="15sp" />

    <EditText
            android:id="@+id/txModelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ex: iPhone 7 32GB"
            android:inputType="textCapSentences"
            android:layout_marginBottom="10dp" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precoEdit"
            android:textStyle="bold"
            android:textSize="15sp" />

    <EditText
            android:id="@+id/txPreco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ex: R$: 0,00"
            android:inputType="number"
            android:layout_marginBottom="10dp" />

</LinearLayout>