<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

   <Button

           android:text="@string/servicos"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/idServicos"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.465" />

   <Button
           android:text="@string/sobre"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/idSobre"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toStartOf="@+id/idServicos"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintHorizontal_bias="0.523" />

   <Button
           android:text="@string/localizacao"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/idLocal"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toEndOf="@+id/idServicos" />

   <TextView
           android:text="@string/app_name"
           android:layout_width="258dp"
           android:layout_height="48dp"
           android:id="@+id/textView"
           android:textStyle="bold"
           android:textSize="22dp"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintBottom_toTopOf="@+id/idServicos"
           app:layout_constraintVertical_bias="0.676"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintHorizontal_bias="0.594" />

</android.support.constraint.ConstraintLayout>